adding logo and change the name of the tab

--- a/apps/access-frontend/index.html
+++ b/apps/access-frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/access-general-house-key-svgrepo-com.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>access-frontend</title>
+    <title>Access Requests</title>
   </head>
   <body>
     <div id="root"></div>
